--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
         $(function () {
             $('#productGroup').treeselect({
-                searchable: true
+                searchable: true,
+                source: [{value: "1", text: "Group 1", checked: false, children: [{value: "2", text: "Group 2", checked: false, children: [{value: "3", text: "Group 3", checked: false, children: []}]}]}, {value: "4", text: "Group 4", checked: false, children: []}, {value: "5", text: "Group 5", checked: false, children: []}]
             });
         });
 
@@ -33,11 +34,6 @@
 <body>
 <div class="container">
     <select multiple="multiple" id="productGroup" name="productGroupen">
-        <option value="1" selected="selected">Group 1</option>
-        <option value="2" data-parent="1">Group 2</option>
-        <option value="3" data-parent="2">Group 3</option>
-        <option value="4">Group 4</option>
-        <option value="5">Group 5</option>
     </select>
 </div>
 </body>
